gstreamer1.0 (1.12.0-1+ma1) experimental; urgency=medium

  [ Francois Gouget ]
  * Improve packaging for cross-compiling.
    - Move the typelib files to architecture-specific directories
      and mark gir1.2-gstreamer-1.0 as M-A:same.

 -- Francois Gouget <fgouget@codeweavers.com>  Tue, 09 May 2017 03:14:15 +0100

gstreamer1.0 (1.12.0-1) experimental; urgency=medium

  * New upstream stable release

 -- Sebastian Dröge <slomo@debian.org>  Thu, 04 May 2017 15:06:31 +0300

gstreamer1.0 (1.11.91-1) experimental; urgency=medium

  * New upstream release candidate.

 -- Sebastian Dröge <slomo@debian.org>  Thu, 27 Apr 2017 16:47:40 +0300

gstreamer1.0 (1.11.90-1) experimental; urgency=medium

  * New upstream release candidate.

 -- Sebastian Dröge <slomo@debian.org>  Fri, 07 Apr 2017 15:14:34 +0300

gstreamer1.0 (1.11.2-1) experimental; urgency=medium

  * New development release

 -- Sebastian Dröge <slomo@debian.org>  Fri, 24 Feb 2017 13:25:49 +0200

gstreamer1.0 (1.11.1-1) experimental; urgency=medium

  * New upstream development release:
    + debian/*doc*,
      debian/rules:
      - Remove PWG and other documentation that is now handled outside
        the source tarball.

 -- Sebastian Dröge <slomo@debian.org>  Thu, 12 Jan 2017 14:42:42 +0200

gstreamer1.0 (1.10.2-1) unstable; urgency=medium

  * New upstream bugfix release

 -- Sebastian Dröge <slomo@debian.org>  Tue, 29 Nov 2016 15:29:47 +0200

gstreamer1.0 (1.10.1-1) unstable; urgency=medium

  * New upstream bugfix release

 -- Sebastian Dröge <slomo@debian.org>  Thu, 17 Nov 2016 14:48:06 +0200

gstreamer1.0 (1.10.0-2) unstable; urgency=medium

  * debian/control:
    + Make sure to properly update debian/control every time, otherwise
      changes to control.in are not applied (Closes: #842526).

 -- Sebastian Dröge <slomo@debian.org>  Mon, 07 Nov 2016 10:42:26 +0200

gstreamer1.0 (1.10.0-1) unstable; urgency=medium

  [ Sebastian Dröge ]
  * debian/control.in: