@@ -1,0 +1,3 @@
+debian/tmp/usr/bin/gst-codec-info-@GST_ABI@
+debian/dh_gstscancodecs usr/bin
+debian/tmp/usr/share/man/man1/dh_gstscancodecs.1
