@@ -1,0 +1,24 @@
+#!/bin/sh
+set -e
+
+add_diversion() {
+  package=`dpkg-divert --listpackage "$1"`
+  if [ "$package" = "@GST_LIB_DEV@" ]
+  then
+    # This divert used to belong to @GST_LIB_DEV@
+    divert=`dpkg-divert --truename "$1"`
+    dpkg-divert --package $package --remove "$1"
+    dpkg-divert --package @DH_GST@ --add --divert "$divert" "$1"
+  else
+    dpkg-divert --package @DH_GST@ --add --rename --divert "$1-gst0.10" "$1"
+  fi
+}
+
+if [ "$1" = "upgrade" ] || [ "$1" = "install" ]; then
+  add_diversion /usr/bin/dh_gstscancodecs
+  add_diversion /usr/share/man/man1/dh_gstscancodecs.1.gz
+fi
+
+#DEBHELPER#
+
+exit 0
